# EE-Notes

./: .gitattributes  .gitignore  README.md
CS3103_2021B/Exam/: exam.docx
CS3103_2021B/Midterm/: quiz.docx
CS3103_2021B/Tutorial/: tut8.docx
CS3103_2021B/code/: cs3103_2021B_ws1.pptx  cs3103_2021B_ws3.pptx  workshop1 execvp.docx
CS3103_Operating_Systems_2022B/Assignments/Assignment1/: CMakeLists.txt
CS3103_Operating_Systems_2022B/Midterm/: Doc1.docx
CS3103_Operating_Systems_2022B/Week10/: cs3103_lec06.pptx
EE2004_2021B/: Delay.docx
EE3211_2021B/: Homework mistakes(week1-6).docx  Schedule_v2.docx  Test Instruction.docx
EE3220_2122B/: asm2c.md
EE4017_Internet_Finance_2022B/: Calculators.xlsx  notes.docx
EE4211_2021B/: EE4211 Note.docx  Fourier spectrum.docx  spatialFilters.xlsx  spatialFilters_1.xlsx
EE4211_2122B/: cal4211.xlsx
EE4211_Computer_Vision_2022B/: spatialDifferentiation.xlsx
FYP_GUIDE_2122B/: Allocation schedule 2021_22[1501].doc  ~$ail_list.docx
GE2262_2021A/: GE2262 Course Outline.docx  GE2262 Tentative Schedule.docx
GE2410_2021A/: Blueprint.docx  Blueprint_script.docx  GE2410FS_floor cleaning robots_prototype design.docx  GE2410FS_wind power generators.docx  Script for the presentation.docx  email.docx  progress report.docx
SDSC2001_2122A/: lec10_scikitlearn.ipynb  lec11_scikitlearn.ipynb  lec3.ipynb  lec4_numpy.ipynb  lec5_pandas.ipynb  lec6_pandas.ipynb  lec7_pandas.ipynb  lec8_matplotlib.ipynb  lec9_matplotlib_seaborn.ipynb
SDSC2001_2223A/: .gitignore
SDSC3002_2122B/: CF.xlsx
SDSC3006_2122A/: .gitignore
(+12950 files in other folders)
